...
      buildWhen: (previous, current) => previous.email != current.email,
      builder: (context, state) {
        return SizedBox(
          height: Constants.formInputHeight,
          width: Constants.formInputWidth,
          child: TextField(
            key: const Key('signUpForm_emailInput_textField'),
            onChanged: (email) =>
                context.read<SignUpCubit>().emailChanged(email),
            keyboardType: TextInputType.emailAddress,
            decoration: InputDecoration(
              fillColor: Theme.of(context).cardColor,
              filled: true,
...
      buildWhen: (previous, current) => previous.password != current.password,
      builder: (context, state) {
        return SizedBox(
          height: Constants.formInputHeight,
          width: Constants.formInputWidth,
          child: TextField(
            key: const Key('signUpForm_passwordInput_textField'),
            onChanged: (password) =>
                context.read<SignUpCubit>().passwordChanged(password),
            obscureText: true,
            decoration: InputDecoration(
              suffix: CustomText(
                text: state.password.invalid ? 'invalid password' : "",
...
          previous.confirmedPassword != current.confirmedPassword,
      builder: (context, state) {
        return SizedBox(
          height: Constants.formInputHeight,
          width: Constants.formInputWidth,
          child: TextField(
            key: const Key('signUpForm_confirmedPasswordInput_textField'),
            onChanged: (confirmPassword) => context
                .read<SignUpCubit>()
                .confirmedPasswordChanged(confirmPassword),
            obscureText: true,
            decoration: InputDecoration(
              suffix: CustomText(
...
    return BlocBuilder<SignUpCubit, SignUpState>(
      buildWhen: (previous, current) => previous.name != current.name,
      builder: (context, state) {
        return Column(
          children: [
            TextField(
              key: const Key('signUpForm_nameInput_textField'),
              onChanged: (name) =>
                  context.read<SignUpCubit>().nameChanged(name),
              keyboardType: TextInputType.name,
              textAlign: TextAlign.center,
              style: TextStyle(
                  fontFamily: "Inter", fontSize: 20.r, fontWeight: Fonts.bold),
...
  Widget build(BuildContext context) {
    ImagePicker imagePicker = this.imagePicker ?? ImagePicker();
    return BlocBuilder<SignUpCubit, SignUpState>(
      buildWhen: (previous, current) => previous.photo != current.photo,
      builder: (context, state) {
        return GestureDetector(
          key: const Key('signUpForm_photoInput_button'),
          child: state.photo != null
              ? CircleAvatar(
                  radius: 59.r,
                  backgroundImage: FileImage(
                    File(state.photo!.path),
                    // fit: BoxFit.cover,
...
    return BlocBuilder<SignUpCubit, SignUpState>(
      buildWhen: (previous, current) => previous.status != current.status,
      builder: (context, state) {
        return state.status.isSubmissionInProgress
            ? const OurCircularProgressIndicator()
            : ElevatedButton(
                key: const Key('signUpForm_continue_raisedButton'),
                style: ElevatedButton.styleFrom(
                  backgroundColor: AppColors.googleSignInColor,
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(Constants.borderRadius),
                  ),
                ),
...
