...
      buildWhen: (previous, current) => previous.email != current.email,
      builder: (context, state) {
        return SizedBox(
          height: Constants.formInputHeight,
          width: Constants.formInputWidth,
          child: TextField(
            key: const Key('loginForm_emailInput_textField'),
            onChanged: (email) =>
                context.read<LoginCubit>().emailChanged(email),
            keyboardType: TextInputType.emailAddress,
            decoration: InputDecoration(
              suffix: CustomText(
                text: state.email.invalid ? 'invalid email' : "",
...
      buildWhen: (previous, current) => previous.password != current.password,
      builder: (context, state) {
        return SizedBox(
          height: Constants.formInputHeight,
          width: Constants.formInputWidth,
          child: TextField(
            key: const Key('loginForm_passwordInput_textField'),
            onChanged: (password) =>
                context.read<LoginCubit>().passwordChanged(password),
            obscureText: true,
            decoration: InputDecoration(
              suffix: CustomText(
                text: state.password.invalid ? 'invalid password' : "",
...
    return BlocBuilder<LoginCubit, LoginState>(
      buildWhen: (previous, current) => previous.status != current.status,
      builder: (context, state) {
        return state.status.isSubmissionInProgress
            ? const OurCircularProgressIndicator()
            : ElevatedButton(
                key: const Key('loginForm_continue_raisedButton'),
                style: ElevatedButton.styleFrom(
                  backgroundColor: AppColors.googleSignInColor,
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(Constants.borderRadius),
                  ),
                ),
...
  @override
  Widget build(BuildContext context) {
    return SizedBox(
      width: Constants.formInputWidth,
      height: Constants.formInputHeight,
      child: ElevatedButton.icon(
        key: const Key('loginForm_googleLogin_raisedButton'),
        label: CustomText(
          text: 'sign in with google',
          fontFamily: "Inter",
          fontWeight: Fonts.regular,
          size: 14.r,
          color: AppColors.whiteColor,
...
}

class _SignUpButton extends StatelessWidget {
  @override
  Widget build(BuildContext context) {
    return GestureDetector(
      key: const Key("loginForm_createAccount_flatButton"),
      child: CustomText(
        text: 'create an account',
        size: 12.r,
        fontWeight: Fonts.regular,
        fontFamily: "Inter",
      ),
...
