import 'package:flutter/material.dart';
import 'package:hang_out_app/presentation/utils/icons.dart';
import 'package:hang_out_app/presentation/utils/constants.dart';

class BottomWhiteNavBar extends StatelessWidget {
  final contents = const <String, Icon>{
    "events": Icon(key: Key("go-to-events-page"), AppIcons.calendarOutline),
    "explore": Icon(key: Key("go-to-explore-page"), AppIcons.compassOutline),
    "groups": Icon(key: Key("go-to-groups-page"), AppIcons.peopleOutline),
    "profile": Icon(key: Key("go-to-profile-page"), AppIcons.personOutline),
  };

  final activeContents = const <String, Icon>{
    "events": Icon(AppIcons.calendar),
    "explore": Icon(AppIcons.compass),
    "groups": Icon(AppIcons.people),
...
