...
                                                    group,
                                                    context);
                                              },
                                              buttonColor: Theme.of(context)
                                                  .iconTheme
                                                  .color!,
                                              titleButton: 'leave',
                                            );
                                          } else if (state.status ==
                                              DeleteJoinLeaveGroupStatus
                                                  .loading) {
                                            return const OurCircularProgressIndicator();
                                          } else if (state.status ==
...
                                              onTap: () async {
                                                _tapJoin(context, currentUser);
                                              },
                                              buttonColor: Theme.of(context)
                                                  .iconTheme
                                                  .color!,
                                              titleButton: 'join',
                                            );
                                          } else if (state.status ==
                                              DeleteJoinLeaveGroupStatus
                                                  .loading) {
                                            return const OurCircularProgressIndicator();
                                          } else if (state.status ==
...
                                                },
                                                buttonColor: Theme.of(context)
                                                    .iconTheme
                                                    .color!,
                                                titleButton: currentUser.id ==
                                                        group.creatorId
                                                    ? 'delete'
                                                    : "leave",
                                              ),
                                            );
                                          } else if (state.status ==
                                              DeleteJoinLeaveGroupStatus
                                                  .loading) {
...
